Updated config